# kdl

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  KDLTests.cmake  LICENSE  README.md
.github/workflows/: build-macos.yml  build.yml
Documentation/: Introduction.md  kdl-specification.kdl
Documentation/Installing/: Ubuntu Installation.md  macOS Installation.md
Documentation/Tutorials/: Introduction.md
Support/: .kdlconfig
Support/CMake/: GenerateVersionHeader.cmake
Support/Examples/: AssertionTest.kdl  AutoIDAllocationTest.kdl  BitmaskTest.kdl  ColorTest.kdl  DefaultValueTest.kdl  DefinitionTest.kdl  DefinitionTest2.kdl  DuplicationTests.kdl  ExampleTest.kdl  ExpressionsTest.kdl  FileImportTest.kdl  FormatRequirementTest.kdl  ImportTest.kdl  LuaExportTest.kdl  MacroTest.kdl  MergedBitmaskTest.kdl  MultivalueTest.kdl  NegativeNumbersTest.kdl  NegativeResourceIDTest.kdl  OptionalFieldTest.kdl  Project.kdl  RangeTest.kdl  RelationshipTest.kdl.no_test  RepeatableTest.kdl  ResourceDeclarationTest.kdl  ResourceReferenceTests.kdl  SpriteWorldImageTest.kdl  StrNTest.kdl  SymbolTest.kdl  TargaImageTest.kdl  TestFile.txt  TestImage.tga  VariableTests.kdl  main.lua
Support/Installer/: Installer-Linux.kdl  Installer-macOS.kdl  Read Me.txt  default.config.kdl
Support/KDLTypes/SpriteWorld/: Manifest.kdl  RLESprite.kdl
Support/KDLTypes/Toolbox/: ColorIcon.kdl  Manifest.kdl  Picture.kdl  PixelPattern.kdl  Sound.kdl  Strings.kdl
Support/SyntaxDefinitions/: KDL.sublime-syntax
Support/Tools/: BuildInstaller  CreateReleasePackage
libKDL/exception/: lexical_exception.hpp  unrecognised_character_exception.hpp
libKDL/host/filesystem/: file.cpp  file.hpp  file_mode.hpp  file_type.hpp  path.cpp  path.hpp
libKDL/lexer/: lexeme.hpp  lexer.cpp  lexer.hpp
libKDL/lexer/conditions/: decimal_set.hpp  hexadecimal_set.hpp  identifier_set.hpp  match.hpp  sequence.hpp  set.hpp
libKDL/util/: glob.cpp  glob.hpp
libKDL/util/sorting/: alpha_numeric_sort.cpp  alpha_numeric_sort.hpp
src/: kdl_version.hpp.in  main.cpp
src/analyzer/: template_extractor.cpp  template_extractor.hpp
src/codegen/lua/: ast.cpp  ast.hpp  type_exporter.cpp  type_exporter.hpp
src/diagnostic/: diagnostic.cpp  fatal.hpp
src/disassembler/: binary_parser.cpp  binary_parser.hpp  kdl_exporter.cpp  kdl_exporter.hpp  resource_exporter.cpp  resource_exporter.hpp  task.cpp  task.hpp
src/generation/lua/: lua_generator.cpp  lua_generator.hpp
src/installer/: installer_asset.cpp  installer_asset.hpp
src/libraries/kestrel/: kestrel_library.cpp  kestrel_library.hpp
src/libraries/macintosh/: macintosh_library.cpp  macintosh_library.hpp
src/libraries/spriteworld/: spriteworld_library.cpp  spriteworld_library.hpp
src/media/: conversion.cpp  conversion.hpp  sprite_sheet_assembler.cpp  sprite_sheet_assembler.hpp
src/media/image/: png.cpp  png.hpp  tga.cpp  tga.hpp
src/media/sound/: wav.cpp  wav.hpp
src/parser/: expectation.cpp  expectation.hpp  file.cpp  file.hpp  lexeme.hpp  lexer.cpp  lexer.hpp  parser.cpp  parser.hpp  sema_parser.hpp
src/parser/sema/: asm_directive.cpp  asm_directive.hpp  asm_directive_sema.cpp  declaration_block.cpp  declaration_block.hpp  declaration_sema.cpp  declaration_sema.hpp  field_definition_sema.cpp  field_sema.cpp  new_resource.cpp  new_resource.hpp  resource_instance_sema.cpp  resource_instance_sema.hpp  template_sema.cpp  template_sema.hpp  type_definition.cpp  type_definition.hpp  type_definition_sema.cpp  type_field.cpp  type_field.hpp  type_template.cpp  type_template.hpp  value_sema.cpp  value_sema.hpp
src/parser/sema/component/: component.cpp  component.hpp  component_file.cpp  component_file.hpp  component_parser.cpp  component_parser.hpp  file_list_parser.cpp  file_list_parser.hpp  types_list_parser.cpp  types_list_parser.hpp
src/parser/sema/declaration/: declaration_sema.cpp  field_sema.cpp  field_sema.hpp  resource_instance_sema.cpp  value_sema.cpp  value_sema.hpp
src/parser/sema/declarations/: declaration_parser.cpp  declaration_parser.hpp  field_parser.cpp  field_parser.hpp  implicit_value_parser.cpp  implicit_value_parser.hpp  named_reference_value_parser.cpp  named_reference_value_parser.hpp  named_value_parser.cpp  named_value_parser.hpp  resource_instance_parser.cpp  resource_instance_parser.hpp  unnamed_reference_value_parser.cpp  unnamed_reference_value_parser.hpp
src/parser/sema/directives/: asm_directive_sema.cpp  asm_directive_sema.hpp  author_directive_parser.cpp  author_directive_parser.hpp  configuration_directive_parser.cpp  configuration_directive_parser.hpp  const_directive_parser.cpp  const_directive_parser.hpp  directive_parser.cpp  directive_parser.hpp  function_directive_parser.cpp  function_directive_parser.hpp  hint_directive_parser.cpp  hint_directive_parser.hpp  import_directive_parser.cpp  import_directive_parser.hpp  let_directive_parser.cpp  let_directive_parser.hpp  out_directive_parser.cpp  out_directive_parser.hpp  project_directive_parser.cpp  project_directive_parser.hpp  require_directive_parser.cpp  require_directive_parser.hpp  version_directive_parser.cpp  version_directive_parser.hpp
src/parser/sema/expression/: argument_parser.cpp  argument_parser.hpp  expression_parser.cpp  expression_parser.hpp  function_parser.cpp  function_parser.hpp  variable_parser.cpp  variable_parser.hpp
src/parser/sema/type_definition/: assertion_parser.cpp  assertion_parser.hpp  assertion_sema.cpp  assertion_sema.hpp  binary_field.cpp  binary_field.hpp  conversion_parser.cpp  conversion_parser.hpp  field_definition_parser.cpp  field_definition_parser.hpp  field_definition_sema.cpp  field_definition_sema.hpp  kdl_type_parser.cpp  kdl_type_parser.hpp  name_extension_parser.cpp  name_extension_parser.hpp  symbol_list_parser.cpp  symbol_list_parser.hpp  template_parser.cpp  (+8 more)
tests/filesystem/: path_tests.cpp
tests/lexer/: lexeme_tests.cpp  lexer_tests.cpp
tests/lexer/conditions/: decimal_set_tests.cpp  hexadecimal_set_tests.cpp  identifier_set_tests.cpp  match_tests.cpp  range_tests.cpp  sequence_tests.cpp  set_tests.cpp
(+10 files in other folders)
